--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -1,4 +1,63 @@
-<h1></h1><a name="qian18:_large_scale_distan_metric_learn_with_uncer"></a><pre>
+<h1></h1><a name="lin19:_which_factor_machin_model_better"></a><pre>
+@inproceedings{<a href="html/pub-0.html#lin19:_which_factor_machin_model_better">lin19:_which_factor_machin_model_better</a>,
+  title = {Which Factorization Machine Modeling is Better: A
+                  Theoretical Answer with Optimal Guarantee},
+  author = {Ming Lin and Shuang Qiu and Jieping Ye and Xiaomin
+                  Song and Qi Qian and Liang Sun and Shenghuo Zhu and
+                  Rong Jin},
+  booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
+                  Artificial Intelligence},
+  year = 2019
+}
+</pre>
+
+<a name="zhou19:_robus_onlin_match_user_arriv_distr_drift"></a><pre>
+@inproceedings{<a href="html/pub-0.html#zhou19:_robus_onlin_match_user_arriv_distr_drift">zhou19:_robus_onlin_match_user_arriv_distr_drift</a>,
+  title = {Robust Online Matching with User Arrival
+                  Distribution Drift},
+  author = { Yu-­‐Hang Zhou and Chen Liang and Nan Li and Cheng
+                  Yang and Shenghuo Zhu and Rong Jin},
+  booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
+                  Artificial Intelligence},
+  year = 2019
+}
+</pre>
+
+<a name="wen19:_robus"></a><pre>
+@inproceedings{<a href="html/pub-0.html#wen19:_robus">wen19:_robus</a>,
+  title = {{RobustSTL}: A Robust Seasonal-­‐Trend Decomposition
+                  Procedure for Long Time Series},
+  author = { Qingsong Wen and Jingkun Gao and Xiaomin Song and
+                  Liang Sun and Huan Xu and Shenghuo Zhu },
+  booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
+                  Artificial Intelligence},
+  year = 2019
+}
+</pre>
+
+<a name="multiple19:_qi_qian_sheng_zhu_jiash"></a><pre>
+@inproceedings{<a href="html/pub-0.html#multiple19:_qi_qian_sheng_zhu_jiash">multiple19:_qi_qian_sheng_zhu_jiash</a>,
+  title = {Robust  Optimization  over  Multiple  Domains},
+  author = {Qi  Qian and  Shenghuo  Zhu and Jiasheng  Tang and
+                  Rong  Jin and  Baigui  Sun and Hao  Li},
+  booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
+                  Artificial Intelligence},
+  year = 2019
+}
+</pre>
+
+<a name="ou19:_semi_param_sampl_stoch_bandit_many_arms"></a><pre>
+@inproceedings{<a href="html/pub-0.html#ou19:_semi_param_sampl_stoch_bandit_many_arms">ou19:_semi_param_sampl_stoch_bandit_many_arms</a>,
+  title = {Semi-Parametric Sampling for Stochasitc Bandits with
+                  Many Arms},
+  author = {Mingdong Ou and Nan Li and Cheng Yang and Shenghuo Zhu and Rong Jin},
+  booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
+                  Artificial Intelligence},
+  year = 2019
+}
+</pre>
+
+<a name="qian18:_large_scale_distan_metric_learn_with_uncer"></a><pre>
 @inproceedings{<a href="html/pub-0.html#qian18:_large_scale_distan_metric_learn_with_uncer">qian18:_large_scale_distan_metric_learn_with_uncer</a>,
   author = {Qi Qian and Jiasheng Tang and Hao Li and Shenghuo
                   Zhu and Rong Jin},
