--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -15,7 +15,7 @@
 @inproceedings{<a href="html/pub-0.html#zhou19:_robus_onlin_match_user_arriv_distr_drift">zhou19:_robus_onlin_match_user_arriv_distr_drift</a>,
   title = {Robust Online Matching with User Arrival
                   Distribution Drift},
-  author = { Yu-­‐Hang Zhou and Chen Liang and Nan Li and Cheng
+  author = {Yu-­Hang Zhou and Chen Liang and Nan Li and Cheng
                   Yang and Shenghuo Zhu and Rong Jin},
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
