--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -31,6 +31,7 @@
                   Liang Sun and Huan Xu and Shenghuo Zhu },
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
+  arxiv = {<a href="http://arxiv.org/abs/1812.01767">http://arxiv.org/abs/1812.01767</a>},
   year = 2019
 }
 </pre>
@@ -42,6 +43,7 @@
                   Rong  Jin and  Baigui  Sun and Hao  Li},
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
+  arxiv = {<a href="https://arxiv.org/abs/1805.07588">https://arxiv.org/abs/1805.07588</a>},
   year = 2019
 }
 </pre>
