--- a/html/tr-0_bib.html
+++ b/html/tr-0_bib.html
@@ -1,16 +1,4 @@
-<h1></h1><a name="wen18:_robus"></a><pre>
-@misc{<a href="html/tr-0.html#wen18:_robus">wen18:_robus</a>,
-  author = {Qingsong Wen and Jingkun Gao and Xiaomin Song and
-                  Liang Sun and Huan Xu and Shenghuo Zhu},
-  title = {RobustSTL: {A} Robust Seasonal-Trend Decomposition
-                  Algorithm for Long Time Series},
-  arxiv = {<a href="http://arxiv.org/abs/1812.01767">http://arxiv.org/abs/1812.01767</a>},
-  note = {arXiv:1812.01767},
-  year = 2018
-}
-</pre>
-
-<a name="yu18:_paral_restar_sgd_non_convex"></a><pre>
+<h1></h1><a name="yu18:_paral_restar_sgd_non_convex"></a><pre>
 @misc{<a href="html/tr-0.html#yu18:_paral_restar_sgd_non_convex">yu18:_paral_restar_sgd_non_convex</a>,
   author = {{Yu}, H. and {Yang}, S. and Shenghuo Zhu},
   title = {{Parallel Restarted SGD for Non-Convex Optimization
@@ -29,17 +17,6 @@
   arxiv = {<a href="https://arxiv.org/abs/1805.07880">https://arxiv.org/abs/1805.07880</a>},
   note = {arXiv:1805.07880},
   year = 2018
-}
-</pre>
-
-<a name="qian18:_robus_optim_multip_domain"></a><pre>
-@misc{<a href="html/tr-0.html#qian18:_robus_optim_multip_domain">qian18:_robus_optim_multip_domain</a>,
-  author = {Qi Qian and Shenghuo Zhu and Jiasheng Tang and Rong
-                  Jin and Baigui Sun and Hao Li},
-  title = {Robust Optimization over Multiple Domains},
-  note = {arXiv:1805.07588},
-  year = 2018,
-  arxiv = {<a href="https://arxiv.org/abs/1805.07588">https://arxiv.org/abs/1805.07588</a>}
 }
 </pre>
 
