--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -7,6 +7,7 @@
                   Rong Jin},
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
+  arxiv = {<a href="https://arxiv.org/abs/1901.11149">https://arxiv.org/abs/1901.11149</a>},
   year = 2019
 }
 </pre>
