--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -1,4 +1,17 @@
-<h1></h1><a name="lin19:_which_factor_machin_model_better"></a><pre>
+<h1></h1><a name="yu19:_paral_restar_sgd_faster_conver_less_commun"></a><pre>
+@inproceedings{<a href="html/pub-0.html#yu19:_paral_restar_sgd_faster_conver_less_commun">yu19:_paral_restar_sgd_faster_conver_less_commun</a>,
+  title = {Parallel Restarted SGD with Faster Convergence and
+                  Less Communication: Demystifying Why Model Averaging
+                  Works for Deep Learning },
+  author = {Hao Yu and Sen Yang and Shenghuo Zhu},
+  booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
+                  Artificial Intelligence},
+  arxiv = {<a href="https://arxiv.org/abs/1807.06629">https://arxiv.org/abs/1807.06629</a>},
+  year = 2019
+}
+</pre>
+
+<a name="lin19:_which_factor_machin_model_better"></a><pre>
 @inproceedings{<a href="html/pub-0.html#lin19:_which_factor_machin_model_better">lin19:_which_factor_machin_model_better</a>,
   title = {Which Factorization Machine Modeling is Better: A
                   Theoretical Answer with Optimal Guarantee},
