--- a/html/tr-0_bib.html
+++ b/html/tr-0_bib.html
@@ -1,11 +1,12 @@
-<h1></h1><a name="yu18:_paral_restar_sgd_non_convex"></a><pre>
-@misc{<a href="html/tr-0.html#yu18:_paral_restar_sgd_non_convex">yu18:_paral_restar_sgd_non_convex</a>,
-  author = {{Yu}, H. and {Yang}, S. and Shenghuo Zhu},
-  title = {{Parallel Restarted SGD for Non-Convex Optimization
-                  with Faster Convergence and Less Communication}},
-  note = {arXiv:1807.06629},
-  year = 2018,
-  arxiv = {<a href="https://arxiv.org/abs/1807.06629">https://arxiv.org/abs/1807.06629</a>}
+<h1></h1><a name="lin19:_robus_gauss_proces_regres_real"></a><pre>
+@misc{<a href="html/tr-0.html#lin19:_robus_gauss_proces_regres_real">lin19:_robus_gauss_proces_regres_real</a>,
+  author = {Ming Lin and Xiaomin Song and Qi Qian and Hao Li and
+                  Liang Sun and Shenghuo Zhu and Rong Jin},
+  title = {Robust Gaussian Process Regression for Real-Time
+                  High Precision GPS Signal Enhancement},
+  arxiv = {<a href="https://arxiv.org/abs/1906.01095">https://arxiv.org/abs/1906.01095</a>},
+  note = {arXiv:1906.01095},
+  year = 2019
 }
 </pre>
 
