--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -1,4 +1,17 @@
-<h1></h1><a name="yu19:_paral_restar_sgd_faster_conver_less_commun"></a><pre>
+<h1></h1><a name="xu19:_learn_non_convex_trunc_losses_sgd"></a><pre>
+@inproceedings{<a href="html/pub-0.html#xu19:_learn_non_convex_trunc_losses_sgd">xu19:_learn_non_convex_trunc_losses_sgd</a>,
+  author = {Yi Xu and Shenghuo Zhu and Sen Yang and Chi Zhang
+                  and Rong Jin and Tianbao Yang},
+  title = {Learning with Non-Convex Truncated Losses by {SGD}},
+  booktitle = {UAI'19: Proceedings of the 35th Conference on
+                  Uncertainty in Artificial Intelligence},
+  year = 2019,
+  url = {<a href="http://auai.org/uai2019/proceedings/papers/244.pdf ">http://auai.org/uai2019/proceedings/papers/244.pdf </a>},
+  arxiv = {<a href="https://arxiv.org/abs/1805.07880">https://arxiv.org/abs/1805.07880</a>}
+}
+</pre>
+
+<a name="yu19:_paral_restar_sgd_faster_conver_less_commun"></a><pre>
 @inproceedings{<a href="html/pub-0.html#yu19:_paral_restar_sgd_faster_conver_less_commun">yu19:_paral_restar_sgd_faster_conver_less_commun</a>,
   title = {Parallel Restarted SGD with Faster Convergence and
                   Less Communication: Demystifying Why Model Averaging
