--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -46,6 +46,7 @@
                   Yang and Shenghuo Zhu and Rong Jin},
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
+  doi = {10.1609/aaai.v33i01.3301459},
   year = 2019
 }
 </pre>
