--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -80,9 +80,11 @@
 @inproceedings{<a href="html/pub-0.html#ou19:_semi_param_sampl_stoch_bandit_many_arms">ou19:_semi_param_sampl_stoch_bandit_many_arms</a>,
   title = {Semi-Parametric Sampling for Stochasitc Bandits with
                   Many Arms},
-  author = {Mingdong Ou and Nan Li and Cheng Yang and Shenghuo Zhu and Rong Jin},
+  author = {Mingdong Ou and Nan Li and Cheng Yang and Shenghuo
+                  Zhu and Rong Jin},
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
+  doi = {10.1609/aaai.v33i01.33017933},
   year = 2019
 }
 </pre>
