--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -66,12 +66,13 @@
 
 <a name="multiple19:_qi_qian_sheng_zhu_jiash"></a><pre>
 @inproceedings{<a href="html/pub-0.html#multiple19:_qi_qian_sheng_zhu_jiash">multiple19:_qi_qian_sheng_zhu_jiash</a>,
-  title = {Robust  Optimization  over  Multiple  Domains},
-  author = {Qi  Qian and  Shenghuo  Zhu and Jiasheng  Tang and
-                  Rong  Jin and  Baigui  Sun and Hao  Li},
+  title = {Robust Optimization over Multiple Domains},
+  author = {Qi Qian and Shenghuo Zhu and Jiasheng Tang and Rong
+                  Jin and Baigui Sun and Hao Li},
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
   arxiv = {<a href="https://arxiv.org/abs/1805.07588">https://arxiv.org/abs/1805.07588</a>},
+  doi = {10.1609/aaai.v33i01.33014739 },
   year = 2019
 }
 </pre>
