--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -13,7 +13,7 @@
 
 <a name="yu19:_paral_restar_sgd_faster_conver_less_commun"></a><pre>
 @inproceedings{<a href="html/pub-0.html#yu19:_paral_restar_sgd_faster_conver_less_commun">yu19:_paral_restar_sgd_faster_conver_less_commun</a>,
-  title = {Parallel Restarted SGD with Faster Convergence and
+  title = {Parallel Restarted {SGD} with Faster Convergence and
                   Less Communication: Demystifying Why Model Averaging
                   Works for Deep Learning },
   author = {Hao Yu and Sen Yang and Shenghuo Zhu},
@@ -34,6 +34,7 @@
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
   arxiv = {<a href="https://arxiv.org/abs/1901.11149">https://arxiv.org/abs/1901.11149</a>},
+  doi = {10.1609/aaai.v33i01.33014312 },
   year = 2019
 }
 </pre>
