--- a/html/tr-0_bib.html
+++ b/html/tr-0_bib.html
@@ -1,16 +1,4 @@
-<h1></h1><a name="lin19:_robus_gauss_proces_regres_real"></a><pre>
-@misc{<a href="html/tr-0.html#lin19:_robus_gauss_proces_regres_real">lin19:_robus_gauss_proces_regres_real</a>,
-  author = {Ming Lin and Xiaomin Song and Qi Qian and Hao Li and
-                  Liang Sun and Shenghuo Zhu and Rong Jin},
-  title = {Robust Gaussian Process Regression for Real-Time
-                  High Precision GPS Signal Enhancement},
-  arxiv = {<a href="https://arxiv.org/abs/1906.01095">https://arxiv.org/abs/1906.01095</a>},
-  note = {arXiv:1906.01095},
-  year = 2019
-}
-</pre>
-
-<a name="qian15:_simil_learn_adapt_regres_its"></a><pre>
+<h1></h1><a name="qian15:_simil_learn_adapt_regres_its"></a><pre>
 @misc{<a href="html/tr-0.html#qian15:_simil_learn_adapt_regres_its">qian15:_simil_learn_adapt_regres_its</a>,
   author = {Qi Qian and Inci M. Baytas and Rong Jin and Anil
                   Jain and Shenghuo Zhu},
@@ -30,18 +18,6 @@
   note = {arXiv:1509.04355},
   year = 2015,
   arxiv = {<a href="https://arxiv.org/abs/1509.04355">https://arxiv.org/abs/1509.04355</a>}
-}
-</pre>
-
-<a name="yang14:_simpl_homot_proxim_mappin_compr_sensin"></a><pre>
-@misc{<a href="html/tr-0.html#yang14:_simpl_homot_proxim_mappin_compr_sensin">yang14:_simpl_homot_proxim_mappin_compr_sensin</a>,
-  author = {Tianbao Yang and Lijun Zhang and Rong Jin and
-                  Shenghuo Zhu},
-  title = {A Simple Homotopy Proximal Mapping for Compressive
-                  Sensing},
-  note = {arXiv:1412.1205},
-  year = 2014,
-  arxiv = {<a href="https://arxiv.org/abs/1412.1205">https://arxiv.org/abs/1412.1205</a>}
 }
 </pre>
 
