--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -1,4 +1,84 @@
-<h1></h1><a name="xu19:_learn_non_convex_trunc_losses_sgd"></a><pre>
+<h1></h1><a name="lin19:_robus_gauss_proces_regres_real"></a><pre>
+@inproceedings{<a href="html/pub-0.html#lin19:_robus_gauss_proces_regres_real">lin19:_robus_gauss_proces_regres_real</a>,
+  author = {Lin, Ming and Song, Xiaomin and Qian, Qi and Li, Hao
+                  and Sun, Liang and Zhu, Shenghuo and Jin, Rong},
+  title = {Robust Gaussian Process Regression for Real-Time
+                  High Precision GPS Signal Enhancement},
+  booktitle = {Proceedings of the 25th ACM SIGKDD International
+                  Conference on Knowledge Discovery \& Data Mining},
+  series = {KDD '19},
+  year = 2019,
+  isbn = {978-1-4503-6201-6},
+  location = {Anchorage, AK, USA},
+  pages = {2838--2847},
+  numpages = 10,
+  doi = {10.1145/3292500.3330695},
+  arxiv = {<a href="https://arxiv.org/abs/1906.01095">https://arxiv.org/abs/1906.01095</a>},
+  acmid = 3330695,
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {gps, obust regression, real-time signal enhancement,
+                  sensor grid}
+}
+</pre>
+
+<a name="yang19"></a><pre>
+@article{<a href="html/pub-0.html#yang19">yang19</a>,
+  author = {Yang, Tianbao and Zhang, Lijun and Jin, Rong and
+                  Zhu, Shenghuo and Zhou, Zhi-Hua},
+  title = {A simple homotopy proximal mapping algorithm for
+                  compressive sensing},
+  journal = {Machine Learning},
+  year = 2019,
+  month = {Jun},
+  day = 01,
+  volume = 108,
+  number = 6,
+  pages = {1019--1056},
+  abstract = {In this paper, we present novel yet simple homotopy
+                  proximal mapping algorithms for reconstructing a
+                  sparse signal from (noisy) linear measurements of
+                  the signal or for learning a sparse linear model
+                  from observed data, where the former task is
+                  well-known in the field of compressive sensing and
+                  the latter task is known as model selection in
+                  statistics and machine learning. The algorithms
+                  adopt a simple proximal mapping of the
+                  {\$}{\$}{\backslash}ell {\_}1{\$}{\$}ℓ1norm at each
+                  iteration and gradually reduces the regularization
+                  parameter for the {\$}{\$}{\backslash}ell
+                  {\_}1{\$}{\$}ℓ1norm. We prove a global linear
+                  convergence of the proposed homotopy proximal
+                  mapping (HPM) algorithms for recovering the sparse
+                  signal under three different settings (i) sparse
+                  signal recovery under noiseless measurements, (ii)
+                  sparse signal recovery under noisy measurements, and
+                  (iii) nearly-sparse signal recovery under
+                  sub-Gaussian noisy measurements. In particular, we
+                  show that when the measurement matrix satisfies
+                  restricted isometric properties (RIP), one of the
+                  proposed algorithms with an appropriate setting of a
+                  parameter based on the RIP constants converges
+                  linearly to the optimal solution up to the noise
+                  level. In addition, in setting (iii), a practical
+                  variant of the proposed algorithms does not rely on
+                  the RIP constants and our results for sparse signal
+                  recovery are better than the previous results in the
+                  sense that our recovery error bound is
+                  smaller. Furthermore, our analysis explicitly
+                  exhibits that more observations lead to not only
+                  more accurate recovery but also faster
+                  convergence. Finally our empirical studies provide
+                  further support for the proposed homotopy proximal
+                  mapping algorithm and verify the theoretical
+                  results.},
+  issn = {1573-0565},
+  doi = {10.1007/s10994-018-5772-7},
+  arxiv = {<a href="https://arxiv.org/abs/1412.1205">https://arxiv.org/abs/1412.1205</a>}
+}
+</pre>
+
+<a name="xu19:_learn_non_convex_trunc_losses_sgd"></a><pre>
 @inproceedings{<a href="html/pub-0.html#xu19:_learn_non_convex_trunc_losses_sgd">xu19:_learn_non_convex_trunc_losses_sgd</a>,
   author = {Yi Xu and Shenghuo Zhu and Sen Yang and Chi Zhang
                   and Rong Jin and Tianbao Yang},
