--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -2,8 +2,8 @@
 @inproceedings{<a href="html/pub-0.html#lin19:_robus_gauss_proces_regres_real">lin19:_robus_gauss_proces_regres_real</a>,
   author = {Lin, Ming and Song, Xiaomin and Qian, Qi and Li, Hao
                   and Sun, Liang and Zhu, Shenghuo and Jin, Rong},
-  title = {Robust Gaussian Process Regression for Real-Time
-                  High Precision GPS Signal Enhancement},
+  title = {Robust {Gaussian} Process Regression for Real-Time
+                  High Precision {GPS} Signal Enhancement},
   booktitle = {Proceedings of the 25th ACM SIGKDD International
                   Conference on Knowledge Discovery \& Data Mining},
   series = {KDD '19},
