--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -4,9 +4,8 @@
                   and Sun, Liang and Zhu, Shenghuo and Jin, Rong},
   title = {Robust {Gaussian} Process Regression for Real-Time
                   High Precision {GPS} Signal Enhancement},
-  booktitle = {Proceedings of the 25th ACM SIGKDD International
+  booktitle = {KDD'19: Proceedings of the 25th ACM SIGKDD International
                   Conference on Knowledge Discovery \& Data Mining},
-  series = {KDD '19},
   year = 2019,
   isbn = {978-1-4503-6201-6},
   location = {Anchorage, AK, USA},
