--- a/html/pub-0_bib.html
+++ b/html/pub-0_bib.html
@@ -1,4 +1,110 @@
-<h1></h1><a name="lin19:_which_factor_machin_model_better"></a><pre>
+<h1></h1><a name="lin19:_robus_gauss_proces_regres_real"></a><pre>
+@inproceedings{<a href="html/pub-0.html#lin19:_robus_gauss_proces_regres_real">lin19:_robus_gauss_proces_regres_real</a>,
+  author = {Lin, Ming and Song, Xiaomin and Qian, Qi and Li, Hao
+                  and Sun, Liang and Zhu, Shenghuo and Jin, Rong},
+  title = {Robust {Gaussian} Process Regression for Real-Time
+                  High Precision {GPS} Signal Enhancement},
+  booktitle = {KDD'19: Proceedings of the 25th ACM SIGKDD International
+                  Conference on Knowledge Discovery \& Data Mining},
+  year = 2019,
+  isbn = {978-1-4503-6201-6},
+  location = {Anchorage, AK, USA},
+  pages = {2838--2847},
+  numpages = 10,
+  doi = {10.1145/3292500.3330695},
+  arxiv = {<a href="https://arxiv.org/abs/1906.01095">https://arxiv.org/abs/1906.01095</a>},
+  acmid = 3330695,
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {gps, obust regression, real-time signal enhancement,
+                  sensor grid}
+}
+</pre>
+
+<a name="yang19"></a><pre>
+@article{<a href="html/pub-0.html#yang19">yang19</a>,
+  author = {Yang, Tianbao and Zhang, Lijun and Jin, Rong and
+                  Zhu, Shenghuo and Zhou, Zhi-Hua},
+  title = {A simple homotopy proximal mapping algorithm for
+                  compressive sensing},
+  journal = {Machine Learning},
+  year = 2019,
+  month = {Jun},
+  day = 01,
+  volume = 108,
+  number = 6,
+  pages = {1019--1056},
+  abstract = {In this paper, we present novel yet simple homotopy
+                  proximal mapping algorithms for reconstructing a
+                  sparse signal from (noisy) linear measurements of
+                  the signal or for learning a sparse linear model
+                  from observed data, where the former task is
+                  well-known in the field of compressive sensing and
+                  the latter task is known as model selection in
+                  statistics and machine learning. The algorithms
+                  adopt a simple proximal mapping of the
+                  {\$}{\$}{\backslash}ell {\_}1{\$}{\$}ℓ1norm at each
+                  iteration and gradually reduces the regularization
+                  parameter for the {\$}{\$}{\backslash}ell
+                  {\_}1{\$}{\$}ℓ1norm. We prove a global linear
+                  convergence of the proposed homotopy proximal
+                  mapping (HPM) algorithms for recovering the sparse
+                  signal under three different settings (i) sparse
+                  signal recovery under noiseless measurements, (ii)
+                  sparse signal recovery under noisy measurements, and
+                  (iii) nearly-sparse signal recovery under
+                  sub-Gaussian noisy measurements. In particular, we
+                  show that when the measurement matrix satisfies
+                  restricted isometric properties (RIP), one of the
+                  proposed algorithms with an appropriate setting of a
+                  parameter based on the RIP constants converges
+                  linearly to the optimal solution up to the noise
+                  level. In addition, in setting (iii), a practical
+                  variant of the proposed algorithms does not rely on
+                  the RIP constants and our results for sparse signal
+                  recovery are better than the previous results in the
+                  sense that our recovery error bound is
+                  smaller. Furthermore, our analysis explicitly
+                  exhibits that more observations lead to not only
+                  more accurate recovery but also faster
+                  convergence. Finally our empirical studies provide
+                  further support for the proposed homotopy proximal
+                  mapping algorithm and verify the theoretical
+                  results.},
+  issn = {1573-0565},
+  doi = {10.1007/s10994-018-5772-7},
+  arxiv = {<a href="https://arxiv.org/abs/1412.1205">https://arxiv.org/abs/1412.1205</a>}
+}
+</pre>
+
+<a name="xu19:_learn_non_convex_trunc_losses_sgd"></a><pre>
+@inproceedings{<a href="html/pub-0.html#xu19:_learn_non_convex_trunc_losses_sgd">xu19:_learn_non_convex_trunc_losses_sgd</a>,
+  author = {Yi Xu and Shenghuo Zhu and Sen Yang and Chi Zhang
+                  and Rong Jin and Tianbao Yang},
+  title = {Learning with Non-Convex Truncated Losses by {SGD}},
+  booktitle = {UAI'19: Proceedings of the 35th Conference on
+                  Uncertainty in Artificial Intelligence},
+  year = 2019,
+  url = {<a href="http://auai.org/uai2019/proceedings/papers/244.pdf">http://auai.org/uai2019/proceedings/papers/244.pdf</a>},
+  arxiv = {<a href="https://arxiv.org/abs/1805.07880">https://arxiv.org/abs/1805.07880</a>}
+}
+</pre>
+
+<a name="yu19:_paral_restar_sgd_faster_conver_less_commun"></a><pre>
+@inproceedings{<a href="html/pub-0.html#yu19:_paral_restar_sgd_faster_conver_less_commun">yu19:_paral_restar_sgd_faster_conver_less_commun</a>,
+  title = {Parallel Restarted {SGD} with Faster Convergence and
+                  Less Communication: Demystifying Why Model Averaging
+                  Works for Deep Learning },
+  author = {Hao Yu and Sen Yang and Shenghuo Zhu},
+  booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
+                  Artificial Intelligence},
+  arxiv = {<a href="https://arxiv.org/abs/1807.06629">https://arxiv.org/abs/1807.06629</a>},
+  doi = {10.1609/aaai.v33i01.33015693},
+  year = 2019
+}
+</pre>
+
+<a name="lin19:_which_factor_machin_model_better"></a><pre>
 @inproceedings{<a href="html/pub-0.html#lin19:_which_factor_machin_model_better">lin19:_which_factor_machin_model_better</a>,
   title = {Which Factorization Machine Modeling is Better: A
                   Theoretical Answer with Optimal Guarantee},
@@ -7,6 +113,8 @@
                   Rong Jin},
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
+  arxiv = {<a href="https://arxiv.org/abs/1901.11149">https://arxiv.org/abs/1901.11149</a>},
+  doi = {10.1609/aaai.v33i01.33014312},
   year = 2019
 }
 </pre>
@@ -19,6 +127,7 @@
                   Yang and Shenghuo Zhu and Rong Jin},
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
+  doi = {10.1609/aaai.v33i01.3301459},
   year = 2019
 }
 </pre>
@@ -27,21 +136,25 @@
 @inproceedings{<a href="html/pub-0.html#wen19:_robus">wen19:_robus</a>,
   title = {{RobustSTL}: A Robust Seasonal-­‐Trend Decomposition
                   Procedure for Long Time Series},
-  author = { Qingsong Wen and Jingkun Gao and Xiaomin Song and
-                  Liang Sun and Huan Xu and Shenghuo Zhu },
+  author = {Qingsong Wen and Jingkun Gao and Xiaomin Song and
+                  Liang Sun and Huan Xu and Shenghuo Zhu},
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
+  arxiv = {<a href="http://arxiv.org/abs/1812.01767">http://arxiv.org/abs/1812.01767</a>},
+  doi = {10.1609/aaai.v33i01.33015409},
   year = 2019
 }
 </pre>
 
 <a name="multiple19:_qi_qian_sheng_zhu_jiash"></a><pre>
 @inproceedings{<a href="html/pub-0.html#multiple19:_qi_qian_sheng_zhu_jiash">multiple19:_qi_qian_sheng_zhu_jiash</a>,
-  title = {Robust  Optimization  over  Multiple  Domains},
-  author = {Qi  Qian and  Shenghuo  Zhu and Jiasheng  Tang and
-                  Rong  Jin and  Baigui  Sun and Hao  Li},
+  title = {Robust Optimization over Multiple Domains},
+  author = {Qi Qian and Shenghuo Zhu and Jiasheng Tang and Rong
+                  Jin and Baigui Sun and Hao Li},
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
+  arxiv = {<a href="https://arxiv.org/abs/1805.07588">https://arxiv.org/abs/1805.07588</a>},
+  doi = {10.1609/aaai.v33i01.33014739},
   year = 2019
 }
 </pre>
@@ -50,9 +163,11 @@
 @inproceedings{<a href="html/pub-0.html#ou19:_semi_param_sampl_stoch_bandit_many_arms">ou19:_semi_param_sampl_stoch_bandit_many_arms</a>,
   title = {Semi-Parametric Sampling for Stochasitc Bandits with
                   Many Arms},
-  author = {Mingdong Ou and Nan Li and Cheng Yang and Shenghuo Zhu and Rong Jin},
+  author = {Mingdong Ou and Nan Li and Cheng Yang and Shenghuo
+                  Zhu and Rong Jin},
   booktitle = {AAAI'19: the Thirty-Third AAAI Conference on
                   Artificial Intelligence},
+  doi = {10.1609/aaai.v33i01.33017933},
   year = 2019
 }
 </pre>
