--- a/html/tr-0_bib.html
+++ b/html/tr-0_bib.html
@@ -1,49 +1,4 @@
-<h1></h1><a name="wen18:_robus"></a><pre>
-@misc{<a href="html/tr-0.html#wen18:_robus">wen18:_robus</a>,
-  author = {Qingsong Wen and Jingkun Gao and Xiaomin Song and
-                  Liang Sun and Huan Xu and Shenghuo Zhu},
-  title = {RobustSTL: {A} Robust Seasonal-Trend Decomposition
-                  Algorithm for Long Time Series},
-  arxiv = {<a href="http://arxiv.org/abs/1812.01767">http://arxiv.org/abs/1812.01767</a>},
-  note = {arXiv:1812.01767},
-  year = 2018
-}
-</pre>
-
-<a name="yu18:_paral_restar_sgd_non_convex"></a><pre>
-@misc{<a href="html/tr-0.html#yu18:_paral_restar_sgd_non_convex">yu18:_paral_restar_sgd_non_convex</a>,
-  author = {{Yu}, H. and {Yang}, S. and Shenghuo Zhu},
-  title = {{Parallel Restarted SGD for Non-Convex Optimization
-                  with Faster Convergence and Less Communication}},
-  note = {arXiv:1807.06629},
-  year = 2018,
-  arxiv = {<a href="https://arxiv.org/abs/1807.06629">https://arxiv.org/abs/1807.06629</a>}
-}
-</pre>
-
-<a name="xu18:_learn_non_convex_trunc_losses_sgd"></a><pre>
-@misc{<a href="html/tr-0.html#xu18:_learn_non_convex_trunc_losses_sgd">xu18:_learn_non_convex_trunc_losses_sgd</a>,
-  author = {Yi Xu and Shenghuo Zhu and Sen Yang and Chi Zhang
-                  and Rong Jin and Tianbao Yang},
-  title = {Learning with Non-Convex Truncated Losses by {SGD}},
-  arxiv = {<a href="https://arxiv.org/abs/1805.07880">https://arxiv.org/abs/1805.07880</a>},
-  note = {arXiv:1805.07880},
-  year = 2018
-}
-</pre>
-
-<a name="qian18:_robus_optim_multip_domain"></a><pre>
-@misc{<a href="html/tr-0.html#qian18:_robus_optim_multip_domain">qian18:_robus_optim_multip_domain</a>,
-  author = {Qi Qian and Shenghuo Zhu and Jiasheng Tang and Rong
-                  Jin and Baigui Sun and Hao Li},
-  title = {Robust Optimization over Multiple Domains},
-  note = {arXiv:1805.07588},
-  year = 2018,
-  arxiv = {<a href="https://arxiv.org/abs/1805.07588">https://arxiv.org/abs/1805.07588</a>}
-}
-</pre>
-
-<a name="qian15:_simil_learn_adapt_regres_its"></a><pre>
+<h1></h1><a name="qian15:_simil_learn_adapt_regres_its"></a><pre>
 @misc{<a href="html/tr-0.html#qian15:_simil_learn_adapt_regres_its">qian15:_simil_learn_adapt_regres_its</a>,
   author = {Qi Qian and Inci M. Baytas and Rong Jin and Anil
                   Jain and Shenghuo Zhu},
@@ -63,18 +18,6 @@
   note = {arXiv:1509.04355},
   year = 2015,
   arxiv = {<a href="https://arxiv.org/abs/1509.04355">https://arxiv.org/abs/1509.04355</a>}
-}
-</pre>
-
-<a name="yang14:_simpl_homot_proxim_mappin_compr_sensin"></a><pre>
-@misc{<a href="html/tr-0.html#yang14:_simpl_homot_proxim_mappin_compr_sensin">yang14:_simpl_homot_proxim_mappin_compr_sensin</a>,
-  author = {Tianbao Yang and Lijun Zhang and Rong Jin and
-                  Shenghuo Zhu},
-  title = {A Simple Homotopy Proximal Mapping for Compressive
-                  Sensing},
-  note = {arXiv:1412.1205},
-  year = 2014,
-  arxiv = {<a href="https://arxiv.org/abs/1412.1205">https://arxiv.org/abs/1412.1205</a>}
 }
 </pre>
 
